[package]
name = "esc"
version = "0.1.0"
authors = ["Patrick Tsai <patosai@outlook.com>"]

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

[dependencies.stm32f4xx-hal]
version = "0.5.0"
features = ["stm32f407", "rt"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
